--- a/mfscrm/crm/templates/crm/base.html
+++ b/mfscrm/crm/templates/crm/base.html
@@ -30,7 +30,7 @@
         /* Set black background color, white text and some padding */
         footer {
             background-color: #555;
-            color: white;
+            color: Yellow;
             padding: 15px;
         }
         /* On small screens, set height to 'auto' for sidenav and grid */
