--- a/mfscrm/crm/templates/crm/service_list.html
+++ b/mfscrm/crm/templates/crm/service_list.html
@@ -10,7 +10,7 @@
 <body>
 <style>
     body {
-        background-color: beige;
+        background-color: Fuchsia;
     }
 </style>
 <div class="container">
