--- a/mfscrm/crm/templates/crm/customer_list.html
+++ b/mfscrm/crm/templates/crm/customer_list.html
@@ -12,7 +12,7 @@
 <body>
 <style>
     body {
-        background-color: beige;
+        background-color: Olive;
     }
 </style>
 <div class="container">
