--- a/mfscrm/crm/templates/crm/home.html
+++ b/mfscrm/crm/templates/crm/home.html
@@ -8,16 +8,13 @@
 {% if user.is_authenticated %}
 <div class="page-container">
 
-    <h2 class="top-menu">Maverick awakens and rewards all of its guests’ senses with friendly hospitality.</h2>
+    <h2 class="top-menu">Maverick hospitality.</h2>
     <div class="col-sm-36">
         <div class="card bg-light p-3">
             <p class="mb-0">
-                It’s both an everyday neighborhood hangout and a food-lover’s destination for special occasions.
-                Where regulars will want to linger all day eating from small or large plates as they make memories over the open fire.
-                It is a generous and friendly gathering place for locals and travelers alike.
-                The food and drink menus are broad yet refined in the simplest way that will have something for everyone.
-                As a Maverick features a menu that is classically prepared and uses Omaha ingredients
-                when possible — most of the fare is cooked over a live wood fire.</p>
+                Maverick Food Pantry aims to contribute to UNO’s culture of caring
+                by providing resources to those in immediate need and connecting them
+                with additional resources in the greater Omaha area for long-term support.</p>
 
         </div>
     </div>
@@ -32,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="thumbnail">
-                            <img src="{% static "images/customer.jpeg" %}" alt="customer"/>
+                            <img src="{% static 'images/customer.jpeg' %}" alt="customer"/>
                             <div class="caption">
                                 <h2>Customer</h2>
                                 <p>We see our success in our customers success </p>
@@ -44,7 +41,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="thumbnail">
-                            <img src="{% static "images/cupcakes.jpg" %}" alt="cupcakes"/>
+                            <img src="{% static 'images/cupcakes.jpg' %}" alt="cupcakes"/>
                             <div class="caption">
                                 <h2>Services</h2>
                                 <p>Great Services</p>
@@ -56,7 +53,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="thumbnail">
-                            <img src="{% static "images/lunch.jpg" %}" alt="lunch"/>
+                            <img src="{% static 'images/lunch.jpg' %}" alt="lunch"/>
                             <div class="caption">
                                 <h2>Products</h2>
                                 <p>Great Products.</p>
