--- a/mfscrm/crm/templates/crm/product_list.html
+++ b/mfscrm/crm/templates/crm/product_list.html
@@ -12,7 +12,7 @@
 <body>
 <style>
     body {
-        background-color: lightseagreen;
+        background-color: Lime;
     }
 </style>
 <div class="container">
